--- a/LoudnessMeter/App.axaml
+++ b/LoudnessMeter/App.axaml
@@ -8,5 +8,16 @@
 
     <Application.Styles>
         <FluentTheme Mode="Light"/>
+        <StyleInclude Source="/LargeLabelControl.axaml"></StyleInclude>
     </Application.Styles>
+    
+    <Application.Resources>
+        
+        <SolidColorBrush x:Key="MidGreyBrush">#e5e5e5</SolidColorBrush>
+        <SolidColorBrush x:Key="LightBlueBrush">#606875</SolidColorBrush>
+        <SolidColorBrush x:Key="MidBlueBrush">#373c44</SolidColorBrush>
+        <SolidColorBrush x:Key="DarkBlueBrush">#1a1c20</SolidColorBrush>
+        <SolidColorBrush x:Key="FadedRedBrush">#bc7c7a</SolidColorBrush>
+        
+    </Application.Resources>
 </Application>
