--- a/LoudnessMeter/Views/MainWindow.axaml
+++ b/LoudnessMeter/Views/MainWindow.axaml
@@ -9,6 +9,20 @@
         x:Class="LoudnessMeter.Views.MainWindow"
         Icon="/Assets/Images/avalonia-logo.ico"
         Title="LoudnessMeter">
+    
+    <Window.Styles>
+        <Style Selector="Button.small">
+            <Setter Property="FontSize" Value="12"></Setter>
+            <Setter Property="Foreground" Value="White"></Setter>
+            <Setter Property="Background" Value="{DynamicResource BrightBlueBrush}"></Setter>
+            <Setter Property="CornerRadius" Value="20"></Setter>
+            <Setter Property="Padding" Value="7 2"></Setter>
+        </Style>
+        <Style Selector="Button.small:pointerover /template/ ContentPresenter">
+            <Setter Property="Background" Value="{DynamicResource BrightBlueHoverBrush}"></Setter>
+            <Setter Property="TextBlock.Foreground" Value="white"></Setter>
+        </Style>
+    </Window.Styles>
 
     <Design.DataContext>
         <vm:MainWindowViewModel/>
@@ -144,37 +158,33 @@
                 
                 <!-- Volume bar buttons -->
                 
-                <StackPanel Grid.Row="2" 
-                            Orientation="Horizontal" 
-                            HorizontalAlignment="Center">
+                <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Center">
                     
-                    <StackPanel.Styles>
-                        <Style Selector="Button">
-                            <Setter Property="FontSize" Value="12"></Setter>
-                            <Setter Property="Foreground" Value="White"></Setter>
-                            <Setter Property="Background" Value="#7f98c7"></Setter>
-                            <Setter Property="CornerRadius" Value="20"></Setter>
-                            <Setter Property="Padding" Value="7 2"></Setter>
-                        </Style>
-                        <Style Selector="Button:pointerover /template/ ContentPresenter">
-                            <Setter Property="Background" Value="#98acd0"></Setter>
-                            <Setter Property="TextBlock.Foreground" Value="white"></Setter>
-                        </Style>
-                    </StackPanel.Styles>
-                    
-                    <Button CornerRadius="30" Width="30" Height="30" Padding="3" Margin="0 0 20 0">
+                    <Button Classes="small" CornerRadius="30" Width="30" Height="30" Padding="3" Margin="0 0 20 0">
                         <Image Margin="5 0 2 0" Source="{SvgImage /Assets/Images/DoubleArrow.svg}"></Image>
                     </Button>
-                    <Button>INT-LRA</Button>
+                    <Button Classes="small">INT-LRA</Button>
+                    
                 </StackPanel>
                 
             </Grid>
             
             <!-- Details Panel -->
             <StackPanel Grid.Column="1" Width="170" Margin=" 0 15 10 15">
-                    <controls:LargeLabelControl></controls:LargeLabelControl>
-                    <controls:LargeLabelControl></controls:LargeLabelControl>
-                    <controls:LargeLabelControl></controls:LargeLabelControl>
+                <controls:LargeLabelControl LargeText="-21.1 LUFS" SmallText="SHORT TERM"></controls:LargeLabelControl>
+                <controls:LargeLabelControl LargeText="-20.7 LUFS" SmallText="INTEGRATED" Background="{DynamicResource LightBlueBrush}"></controls:LargeLabelControl>
+                <controls:LargeLabelControl LargeText="9.5 LU" SmallText="LOUDNESS RANGE"></controls:LargeLabelControl>
+                <controls:LargeLabelControl LargeText="11.5 LU" SmallText="REALTIME DYNAMICS"></controls:LargeLabelControl>
+                <controls:LargeLabelControl LargeText="20.5 LU" SmallText="AVG. DYNAMIC (PLR)" Margin="0 0 0 13"></controls:LargeLabelControl>
+                                            
+                <controls:LargeLabelControl LargeText="-9.8 LUFS" SmallText="MOMENTARY MAX"></controls:LargeLabelControl>
+                <controls:LargeLabelControl LargeText="-15.1 LUFS" SmallText="SHORT TERM MAX"></controls:LargeLabelControl>
+                <controls:LargeLabelControl LargeText="0.7dB" SmallText="TRUE PEAK MAX" Margin="0 0 0 5"></controls:LargeLabelControl>
+            
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                    <Button Classes="small" Margin="0 0 20 0">AUTO</Button>
+                    <Button Classes="small" FontSize="20" FontFamily="Arial" Background="{DynamicResource FadedRedBrush}">X</Button>
+                </StackPanel>
             </StackPanel>
             
             <!-- Graph -->
