--- a/LoudnessMeter/App.axaml
+++ b/LoudnessMeter/App.axaml
@@ -17,6 +17,9 @@
         <SolidColorBrush x:Key="LightBlueBrush">#606875</SolidColorBrush>
         <SolidColorBrush x:Key="MidBlueBrush">#373c44</SolidColorBrush>
         <SolidColorBrush x:Key="DarkBlueBrush">#1a1c20</SolidColorBrush>
+        <SolidColorBrush x:Key="BrightBlueBrush">#7f98c7</SolidColorBrush>
+        <SolidColorBrush x:Key="BrightBlueHoverBrush">#98acd0</SolidColorBrush>
+        
         <SolidColorBrush x:Key="FadedRedBrush">#bc7c7a</SolidColorBrush>
         
     </Application.Resources>
