--- a/Avalonia.LoudnessMeter/Views/MainView.axaml
+++ b/Avalonia.LoudnessMeter/Views/MainView.axaml
@@ -204,7 +204,8 @@
         <!-- Bottom bar -->
         <Grid Grid.Row="2" ColumnDefinitions="Auto, Auto, *, Auto, Auto, Auto ,Auto ,Auto"
               Margin="8">
-            <Button Grid.Column="0" Margin="0 0 8 0">Stereo</Button>
+            <Button Grid.Column="0" Margin="0 0 8 0" Name="ChannelConfigurationButton"
+                    Command="{Binding ChannelConfigurationButtonPressedCommand}">Stereo</Button>
             <Button Grid.Column="1">YouTube</Button>
             <Button Grid.Column="3" Margin="0 0 8 0">10 sec</Button>
             <Button Grid.Column="4" Margin="0 0 8 0">CONTINUOUS</Button>
